feat: update skills

--- a/index.html
+++ b/index.html
@@ -91,35 +91,29 @@
             <div class="px-5 py-2 text-left md:col-span-2 md:text-right">
               <h3 class="text-lg font-bold uppercase">Skills</h3>
             </div>
-            <div class="px-5 py-2 md:col-span-4 grid grid-cols-2 md:grid-cols-3 gap-3">
+            <div class="px-5 py-2 md:col-span-4 grid grid-cols-2 gap-3">
               <!-- Card for Programming -->
               <div class="p-4 rounded-lg shadow-md">
                 <h5 class="text-indigo-700 font-bold">Programming</h5>
-                <p class="text-sm">TypeScript, Python, Golang, JavaScript</p>
+                <p class="text-sm">TypeScript, Javascript, Python, Golang</p>
               </div>
 
               <!-- Card for Frameworks -->
               <div class="p-4 rounded-lg shadow-md">
                 <h5 class="text-indigo-700 font-bold">Frameworks</h5>
-                <p class="text-sm">Node, React, Vue, Hyperapp, Preact, REST</p>
+                <p class="text-sm">Node, React, Vue, Next.js, REST</p>
               </div>
 
               <!-- Card for Tools -->
               <div class="p-4 rounded-lg shadow-md">
                 <h5 class="text-indigo-700 font-bold">Tools</h5>
-                <p class="text-sm">GitHub, Docker, GIT, Github Actions, JIRA</p>
-              </div>
-
-              <!-- Card for Cloud -->
-              <div class="p-4 rounded-lg shadow-md">
-                <h5 class="text-indigo-700 font-bold">Cloud</h5>
-                <p class="text-sm">AWS, Google Cloud</p>
+                <p class="text-sm">GitHub, Docker, GIT, AWS, GCP</p>
               </div>
 
               <!-- Card for Databases -->
               <div class="p-4 rounded-lg shadow-md">
                 <h5 class="text-indigo-700 font-bold">Databases</h5>
-                <p class="text-sm">GraphQL, MongoDB, MySQL, PostgreSQL</p>
+                <p class="text-sm">PostgreSQL, MongoDB</p>
               </div>
             </div>
           </div>
