feat: update company pinmeto

--- a/index.html
+++ b/index.html
@@ -150,7 +150,15 @@
             <div class="space-y-6 px-5 py-2 md:col-span-4">
               <div>
                 <h4 class="mb-2 text-lg font-semibold text-indigo-700">
-                  Sep 2023 - Ongoing
+                  Apr 2025 - Ongoing
+                </h4>
+                <h5 class="mb-1 font-bold">Full Stack Developer at PinMeTo, Malmö</h5>
+                <p class="leading-relaxed">
+                </p>
+              </div>
+              <div>
+                <h4 class="mb-2 text-lg font-semibold text-indigo-700">
+                  Sep 2023 - Apr 2025
                 </h4>
                 <h5 class="mb-1 font-bold">Full Stack Developer at Tedsys, Malmö</h5>
                 <p class="leading-relaxed">
